--- a/shootEmUp/index.html
+++ b/shootEmUp/index.html
@@ -34,10 +34,10 @@
       <div>
         <!-- Fixed-size canvas -->
         <canvas id="game" width="800" height="600"></canvas>
-        <div class="hint">Move: Arrow Keys or WASD</div>
+        <div class="hint">Move: mouse Fire: Hold left key</div>
       </div>
     </div>
-    <!-- Game script -->
+    <script src="assets.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
